<resources>
    <string name="app_name">Fibermetric</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonDone">Done</string>
    <string name="buttonLogIn">Authorize</string>
    <string name="buttonNo">No</string>
    <string name="buttonYes">Yes</string>
    <string name="description">Description</string>
    <string name="hintPassWord">Password</string>
    <string name="hintUserName">User Name</string>
    <string name="jobStateActive">Active</string>
    <string name="jobStateCompleted">Completed</string>
    <string name="jobStateScheduled">Scheduled</string>
    <string name="jobStateSuspended">Suspended</string>
    <string name="taskCompleted">%1$s completed</string>
    <string name="taskInProgress">%1$s in progress</string>
    <string name="undo_button">UNDO</string>
    <string name="labelAsset">Asset:</string>
    <string name="labelAssignedBy">Assigned By:</string>
    <string name="labelDeadline">Deadline:</string>
    <string name="labelDescription">Description:</string>
    <string name="labelForgotPassword">Forgot Your Password?</string>
    <string name="labelJobDetail">Job Details</string>
    <string name="labelJobDuration">Duration:</string>
    <string name="labelJobId">No.</string>
    <string name="labelJobSuspend1">Suspend the job</string>
    <string name="labelJobSuspend2">Are you sure you want to suspend the job?</string>
    <string name="labelJobSuspend3">Are you sure you want to start this job and suspend the active one?</string>
    <string name="labelJobType">Type:</string>
    <string name="labelLess">Less</string>
    <string name="labelLocation">Location:</string>
    <string name="labelMore">More</string>
    <string name="labelNoRows">No Rows</string>
    <string name="labelPriority">Priority:</string>
    <string name="labelProgress1">Progress</string>
    <string name="labelProgress2">Progress:</string>
    <string name="labelTaskAction">Required Actions:</string>
    <string name="labelTaskDetail">Task Details:</string>
    <string name="labelFeedbackHeader">Great job!</string>
    <string name="labelFeedbackLabel1">How was the job defined in your opinion?</string>
    <string name="labelFeedbackLabel2">Use at least the stars to tell us.</string>
    <string name="labelFeedbackComments">Leave your comments</string>
    <string name="labelTasks">Tasks</string>
    <string name="labelZeroPercent">100%</string>
    <string name="menuAddByBeacon">Add By Beacon</string>
    <string name="menuAlerts">Alerts</string>
    <string name="menuCalendar">Calendar</string>
    <string name="menuChart">Chart</string>
    <string name="menuChat">Chats</string>
    <string name="menuEscalation">Escalation</string>
    <string name="menuFeedBack">Feedback</string>
    <string name="menuHelp">Help</string>
    <string name="menuInventory">My Inventory</string>
    <string name="menuJob">Job</string>
    <string name="menuJobToday">Today</string>
    <string name="menuJobWeek">Week</string>
    <string name="menuReplaceBeacon">Replace Beacon</string>
    <string name="menuRequiredInventory">Required Inventory</string>
    <string name="menuSearch">Search</string>
    <string name="menuSend">SEND</string>
    <string name="menuSetting">Settings</string>
    <string name="menuSignOut">Sign Out</string>
    <string name="menuStub">Stub</string>
    <string name="menuSupport">Support</string>
    <string name="menuMore">More</string>
    <string name="menuReport">Report a Problem</string>
    <string name="menuMyInventory">My Inventory</string>
    <string name="menuTodaysInventory">Today\'s Inventory</string>
    <string name="menuTask">Task</string>
    <string name="menuTaskEnd">Job Done</string>
    <string name="menuToolBox">ToolBox</string>
    <string name="menuRefresh">Refresh</string>
    <string name="navDrawerClose">close navigation drawer</string>
    <string name="navDrawerOpen">open navigation drawer</string>
    <string name="navDrawerStub">support@go-factory.com</string>
    <string name="task">Task</string>
    <string name="toastSignInFailure">Sign In Failure</string>
    <string name="toastSignInSuccess">Sign In Success</string>
    <string name="toastMissingPassWord">Missing Password</string>
    <string name="toastMissingUserName">Missing Account Name</string>
    <string name="toastRequiredActionsNotCompleted">You must complete the required task actions</string>
    <string name="whiteSpace"> </string>
    <string name="stubLong">Of all the fishies in the sea the mermaid is the one for me. Of all the fishies in the sea the mermaid is the one for me. Of all the fishies in the sea the mermaid is the one for me. Of all the fishies in the sea the mermaid is the one for me. Of all the fishies in the sea the mermaid is the one for me.</string>
    <string name="stubShort">Short Stub String</string>
    <string name="stub">stub fragment</string>
    <string name="part">PART</string>
    <string name="chat_list">chat list</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_job">Job Manager</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawerClose">Drawer Close</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="action_add_job">Add Job</string>
    <string name="action_add_thing">Add Thing</string>
    <string name="action_add_thing_barcode">Add Thing Barcode</string>
    <string name="action_add_thing_ble">Add Thing BLE</string>
    <string name="action_add_thing_manual">Add Thing Manual</string>
    <string name="action_assign_job">Assign Job</string>
    <string name="action_discover_thing_barcode">Discover Thing Barcode</string>
    <string name="action_discover_thing_ble">Discover Thing BLE</string>
    <string name="action_job_manager">Job Manager</string>
    <string name="action_thing_manager">Thing Manager</string>
    <string name="action_profile">Profile</string>
    <string name="action_account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_turnbyturn">Turn by Turn [TEST]</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="button_camera">Camera</string>
    <string name="button_save">Save</string>
    <string name="button_finished">Finished</string>
    <string name="button_seed_db_allan">Initialize DB (Allan)</string>
    <string name="button_seed_db_bryan">Initialize DB (Bryan) </string>
    <string name="button_seed_db_donal">Initialize DB (Donal)</string>
    <string name="button_send_feedback">Send Feedback</string>
    <string name="button_test_discovery">Test WiFi Discovery</string>
    <string name="button_test_notify">Test Notify</string>
    <string name="button_test_zxing">Test ZXing</string>
    <string name="prompt_set_latitude">Latitude</string>
    <string name="prompt_set_longitude">Longitude</string>
    <string name="button_visit_gofactory">www.go-factory.com</string>
    <string name="context_menu_take_custody">Take Custody</string>
    <string name="default_name">Default Name</string>
    <string name="empty_name">Empty Name</string>
    <string name="hint_feedback">Enter your feedback here...</string>
    <string name="label_active">Active:</string>
    <string name="label_address">Address:</string>
    <string name="label_alert">Alert:</string>
    <string name="label_assign_time">Assignment:</string>
    <string name="label_assigned_to">Assigned To:</string>
    <string name="label_assigned_time">Assigned Time:</string>
    <string name="label_barcode">Barcode:</string>
    <string name="label_beacon">Beacon:</string>
    <string name="label_board">Board:</string>
    <string name="label_brand">Brand:</string>
    <string name="label_category">Category:</string>
    <string name="label_counter">Counter:</string>
    <string name="label_custody">Custody:</string>
    <string name="label_description">Description:</string>
    <string name="label_device">Device:</string>
    <string name="label_display">Display:</string>
    <string name="label_first_install">First Installed:</string>
    <string name="label_free_memory">Free Memory:</string>
    <string name="label_last_update">Last Update:</string>
    <string name="label_manufacturer">Manufacturer:</string>
    <string name="label_max_memory">Max Memory:</string>
    <string name="label_model">Model:</string>
    <string name="label_name">Name:</string>
    <string name="label_name_first">First Name:</string>
    <string name="label_name_last">Last Name:</string>
    <string name="label_name_suffix">Suffix:</string>
    <string name="label_ndx">Order:</string>
    <string name="label_no_rows">No Rows</string>
    <string name="label_note">Note:</string>
    <string name="label_owner">Owner:</string>
    <string name="label_priority">Priority:</string>
    <string name="label_product">Product:</string>
    <string name="label_processors">Processors:</string>
    <string name="label_quality">Quality:</string>
    <string name="label_rescan">Rescan</string>
    <string name="label_serial">Serial:</string>
    <string name="label_start_time">Start Time:</string>
    <string name="label_state">State:</string>
    <string name="label_total_memory">Total Memory:</string>
    <string name="label_type">Type:</string>
    <string name="label_update_time">Update:</string>
    <string name="label_uuid">UUID:</string>
    <string name="label_version">Version:</string>
    <string name="label_pickup">Pick up</string>
    <string name="label_in_custody">In custody</string>
    <string name="inventory_list_menu_assert_custody">Assert Custody</string>
    <string name="inventory_list_menu_delete_item">Delete From Inventory</string>
    <string name="inventory_list_menu_edit">Edit</string>
    <string name="inventory_list_menu_remove_barcode">Remove Barcode</string>
    <string name="inventory_list_menu_remove_ble">Remove BLE</string>
    <string name="inventory_list_menu_replace_barcode">Replace Barcode</string>
    <string name="inventory_list_menu_replace_ble">Replace BLE</string>
    <string name="inventory_list_menu_transfer_custody">Transfer Custody</string>
    <string name="job_list_menu_tasks">Tasks</string>
    <string name="job_list_menu_transfer">Transfer</string>
    <string name="notify_content_tundro_alert">Fibermetric Alert</string>
    <string name="notify_content_missing_beacon">Missing BLE Beacon</string>
    <string name="notify_content_tap_for_bt">Tap to enable bluetooth</string>
    <string name="person_list_menu_chat">Chat</string>
    <string name="radio_part">Part</string>
    <string name="radio_tool">Tool</string>
    <string name="radio_vehicle">Vehicle</string>
    <string name="task_list_menu_delete">Delete</string>
    <string name="title_activity_diagnostic">Diagnostic</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_section_about">About</string>
    <string name="title_section_account">Account</string>
    <string name="title_section_add_thing_barcode">Add Thing Barcode</string>
    <string name="title_section_add_thing_ble">Add Thing BLE</string>
    <string name="title_section_alert">Alert</string>
    <string name="title_section_alert_detail">Alert Detail</string>
    <string name="title_section_barcode">BarCode</string>
    <string name="title_section_certificate">Certificate</string>
    <string name="title_section_chart">Map</string>
    <string name="title_section_chat">Chat</string>
    <string name="part_pickedup_label">When:</string>
    <string name="part_location_label">Location:</string>
    <string name="coc_name_label">Name:</string>
</resources>