<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.TaskPagerFragment">

    <item android:id="@+id/actionChat"     android:orderInCategory="20" android:title="@string/menuChat"     android:icon="@drawable/ic_support_white"   app:showAsAction="ifRoom" />
    <item android:id="@+id/actionToolBox"  android:orderInCategory="40" android:title="@string/menuToolBox"  android:icon="@drawable/ic_inventory_white"  app:showAsAction="ifRoom" />
    <item android:id="@+id/actionHelp"     android:orderInCategory="60" android:title="@string/menuHelp" app:showAsAction="never" />
    <item android:id="@+id/actionFeedBack" android:orderInCategory="60" android:title="@string/menuFeedBack" app:showAsAction="never" />
</menu>