<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.JobListFragment">

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:orderInCategory="60"
        android:title="@string/menuSearch"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionToolBox"
        android:icon="@drawable/ic_inventory_white"
        android:orderInCategory="40"
        android:title="@string/menuToolBox"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionJobList"
        android:icon="@drawable/ic_list_view_white"
        android:orderInCategory="30"
        android:title="@string/menuJob"
        app:showAsAction="ifRoom" />
</menu>
