<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@mipmap/splash_back"
    tools:context="com.guggiemedia.fibermetric.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="61dp"
        android:src="@mipmap/logo"/>

    <TableLayout
        android:id="@+id/tableLayout"
        android:paddingBottom="20dp"
        android:layout_below="@id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0">

        <TableRow>
            <EditText android:id="@+id/editUserName" android:textColor="@color/white" android:textColorHint="@color/white" android:hint="@string/hintUserName"/>
        </TableRow>

        <TableRow>
            <EditText android:id="@+id/editPassWord" android:textColor="@color/white" android:textColorHint="@color/white" android:hint="@string/hintPassWord" android:password="true"/>
        </TableRow>

        <TableRow>
            <TextView android:id="@+id/tvNewPassword" android:textColor="@color/semi_white" android:text="@string/labelForgotPassword"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_below="@id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/tomato"
        android:textColor="@color/white"
        android:text="@string/buttonLogIn"/>
</RelativeLayout>
