<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.guggiemedia.fibermetric.ui.CaptureDialog">

    <TextView
        android:id="@+id/tvBanner1"
        android:textColor="#de000000"
        android:textSize="16sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="25dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stubShort"/>

    <EditText
        android:id="@+id/editCapture"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonDone"
            android:layout_alignParentRight="true"
            android:text="@string/buttonDone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/buttonCancel"
            android:text="@string/buttonCancel"
            android:layout_toLeftOf="@id/buttonDone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </RelativeLayout>
</LinearLayout>