<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- job progress -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee">

        <ProgressBar style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/pbJobProgress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pbJobProgress"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvProgressLabel"
                style="@style/JobProgressLeftBanner"
                android:text="@string/labelProgress1" />

            <TextView
                android:id="@+id/tvProgressValue"
                style="@style/JobProgressRightBanner"
                android:text="@string/labelZeroPercent" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.design.widget.CoordinatorLayout
            android:background="#ffffff"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <com.guggiemedia.fibermetric.ui.component.RecyclerViewEmptySupport
                android:id="@+id/recyclerView"
                style="@style/RecyclerList" />

            <TextView
                android:id="@+id/list_empty"
                style="@style/EmptyListMessage"
                android:text="@string/labelNoRows" />
        </android.support.design.widget.CoordinatorLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>